# orangered

./: .dockerignore  .eslintrc.js  .gitignore  Dockerfile  Makefile  README.md  app.py  application.py  db.py  docker-compose.yml  insert_subreddits.sql  orangered.yaml  package.json  procfile  pyproject.toml  requirements.txt  scrape_subreddits  send_emails  subreddits.py  summer  tests.py  tsconfig.json  update_static  update_subreddits  utils.py  webpack.config.js
infra/: cloud_run.tf  cloud_sql.tf  cloud_storage.tf  main.tf  scheduler.tf  secrets.tf  variables.tf
kubernetes/gke/: cron_send_emails.yaml  ingress.yaml  orangered-service.yaml  orangered.yaml  postgres.yaml
kubernetes/local/: orangered-service.yaml  orangered.yaml
kubernetes/minikube/: ingress.yaml  orangered.yaml  postgres.yaml
kubernetes/remote/: certificate.yaml  ingress.yaml  orangered-service.yaml  orangered.yaml
static/css/: freelancer.css  orangered.css
static/email/: sample_email.html
static/html/: privacy.html
static/js/: manage.js  orangered.js  signup.js
static/ts/: App.tsx  Footer.tsx  Header.tsx  ManageApp.tsx  SignupApp.tsx  UnsubscribeApp.tsx  index.tsx  manage.tsx  theme.ts  types.ts  unsubscribe.tsx  utils.ts
static/ts/app/: hooks.ts  store.ts
static/ts/features/ManageForm/: ManageForm.tsx  manageFormSlice.ts  types.ts
static/ts/features/SignupForm/: SignupForm.tsx  signupFormAPI.ts  signupFormSlice.ts  types.ts
templates/: base.html  email.html  email.txt  email_interval_radios.html  index.html  manage.html  subreddit_select.html  unsubscribe.html
(+2 files in other folders)
