[tool.poetry]
name = "orangered"
version = "0.1.0"
description = ""
authors = ["Matt Butterfield <matt@mattbutterfield.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.39"
praw = "^7.6.0"
gunicorn = "^20.1.0"
sendgrid = "^6.9.7"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
black = "^22.6.0"
freezegun = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
